# chromavale

./: .env.example  README.md  composer.json  package-lock.json
.github/workflows/: desktop-release.yml
app/Http/Controllers/: CheckoutController.php  DownloadController.php  LicenseController.php  WaitlistController.php
app/Mail/: LicenseKeyMail.php  WaitlistWelcomeMail.php
app/Models/: License.php  WaitlistSubscriber.php
bootstrap/: app.php
config/: download.php  services.php
database/migrations/: 2026_06_19_185301_create_waitlist_subscribers_table.php  2026_06_23_165417_create_licenses_table.php
desktop/: .gitignore  README.md  STORE.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/msix/: AppxManifest.xml  pack.ps1
desktop/src/: App.vue  Calibration.vue  ProModal.vue  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src-tauri/src/engine/: correction.rs  filters.rs  mod.rs  platform_macos.rs  platform_other.rs  platform_windows.rs  ramp.rs
desktop/src-tauri/tests/: hotkey_registration.rs
public/: robots.txt  sitemap.xml
resources/js/: app.ts
resources/js/components/: AppLogo.vue  AppLogoIcon.vue  AppSidebar.vue
resources/js/pages/: Calibrate.vue  Dashboard.vue  Download.vue  PurchaseSuccess.vue  Try.vue  Waitlist.vue  Welcome.vue
resources/views/: app.blade.php
routes/: web.php
scripts/: make-app-icon.php  make-icon.php  make-og.php
(+4 files in other folders)
