[package]
name = "chromavale"
version = "0.1.0"
description = "ChromaVale - screen color control and color-blind correction"
authors = ["ChromaVale"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "chromavale_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_ColorSystem",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Magnification",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(windows)'.dev-dependencies]
global-hotkey = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"

[profile.release]
opt-level = "s"
lto = true
strip = true
